--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, vero odit, veritatis eius sit sint ab architecto sequi ea commodi iusto voluptas consectetur ut, fugiat eum mollitia quaerat. Repellendus, doloribus. -->
   </body>
 </html>
